# trans-rss

./: .gitignore  README.md  pyproject.toml
smaple/: output.json
src/rss/: config.py  dao.py  db.py  downloader.py  errors.py
tests/: db.py  rss.py
tests/data/: rss.xml
